--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,10 @@ nav li a:hover {
     .wrapper {
         margin: 10px 3px;
     }
+    
+    body {
+        max-width: 100vw;
+    }
 }
 
 /* レスポンシブ↑ */
