--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ nav li a:hover {
 @media (max-width: 600px) {
     #references {
         flex-direction: column;
+        max-width: 100%;
     }
     
     .contact-content {
